--- a/mangaScrap/app/assets/stylesheets/scaffolds.scss
+++ b/mangaScrap/app/assets/stylesheets/scaffolds.scss
@@ -167,3 +167,14 @@ label {
     }
   }
 }
+
+.manga-search{
+  max-width: 640px;
+  margin: auto;
+  background: #ffffff;
+  padding: 0px 26px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(88, 88, 88, 0.43);
+  color: grey;
+  text-transform: capitalize;
+}
